--- a/src/main/java/com/youcefmei/bibliotheque/views/swing/Library.form
+++ b/src/main/java/com/youcefmei/bibliotheque/views/swing/Library.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.youcefmei.bibliotheque.views.swing.LibraryForm">
   <grid id="27dc6" binding="contentPane" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="600" height="400"/>
+      <xy x="20" y="20" width="628" height="512"/>
     </constraints>
     <properties>
       <minimumSize width="600" height="300"/>
@@ -435,6 +435,12 @@
           </grid>
         </children>
       </grid>
+      <vspacer id="1a785">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
